--- a/compendium.ipynb
+++ b/compendium.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a3a67329",
+   "id": "2ac850c7",
    "metadata": {},
    "source": [
     "## Содержание "
@@ -10,16 +10,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec3358f0",
+   "id": "426d6f41",
    "metadata": {},
    "source": [
     "### [07.12.2022 (var, dir, locals, globals, объектная модель )](#1)\n",
-    "### [13.12.2022 (zip)](2)\n"
+    "### [13.12.2022 (zip)](#2)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0995d5a8",
+   "id": "a1873041",
    "metadata": {},
    "source": [
     "#### 07.12.2022 (var, dir, locals, globals, объектная модель ) <a id = '1'>"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d91e34a",
+   "id": "7d0f98b3",
    "metadata": {},
    "source": [
     "vars() - возвращает словарь для тукущего простарнства имён(если вызвать без аргумента) или словарь относящийся к переданному аргументу"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a74f3f95",
+   "id": "b4f1c636",
    "metadata": {},
    "source": [
     "vars(enumerate)"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f63eb75c",
+   "id": "64c6fe13",
    "metadata": {},
    "source": [
     "locals() - всегда возвращает текущее пространство имен ввиде словаря\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "42c7bd0b",
+   "id": "08502c5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b1838a8a",
+   "id": "d1db7810",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30c18753",
+   "id": "32dae4d7",
    "metadata": {},
    "source": [
     "globals() - всегда возвращает словарь пространства имён модуля."
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "708571ae",
+   "id": "0856c00a",
    "metadata": {},
    "source": [
     "dir() - без аргумента возвращает лист с именами в текущем локальном пространстве\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a242dd1",
+   "id": "7c31bcd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf790786",
+   "id": "f3292a5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9cd145b",
+   "id": "ff1e43b4",
    "metadata": {},
    "source": [
     "объектная модель в питоне:\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c986f7ad",
+   "id": "b4062345",
    "metadata": {},
    "source": [
     "identity - никогда не меняется у объекта. Функцией id() можно узнать представление identity у объекта. Это как бы адрес объекта в памяти."
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7ba4cee",
+   "id": "dab0393a",
    "metadata": {},
    "source": [
     "type - определяет операции которяе поддреживает объект и возомжные его значения. тип объекта не изменяем. "
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "785fe538",
+   "id": "a32c6830",
    "metadata": {},
    "source": [
     "value - значение объекта. может быть изменяемым и не изменяемым. при этом важно что неизменяемось immutability относится к коллекции которая входит в объект а не к значениям. Пример: кортеж содержащий список "
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "038f0c30",
+   "id": "03513419",
    "metadata": {},
    "source": [
     "#### 13.12.2022 (zip) <a id = '2'>"
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88db30dc",
+   "id": "2658c6ac",
    "metadata": {},
    "source": [
     "zip - итерирует несколько итерируемых объектов и возвращает i кортех c i эдементами итерируемых объектовю возвращает итератор тюплов. zip это ленивая функция. по умолчанию количество итерация равно самому меньшему количетсву эдементов в переданных объектах. \n"
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d7314c0",
+   "id": "d772595c",
    "metadata": {},
    "source": [
     "можно передать функции strict=True в таком случае zip \n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "33da125e",
+   "id": "446e7727",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9469d9e1",
+   "id": "ca746a6c",
    "metadata": {},
    "outputs": [],
    "source": []
