--- a/inverse_transform_sampling.ipynb
+++ b/inverse_transform_sampling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7dab8b9e",
+   "id": "faccb4ff",
    "metadata": {},
    "source": [
     "### Метод обратного преобразования"
@@ -10,11 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d305fd29",
+   "execution_count": 36,
+   "id": "857a60f5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scipy.stats import expon, kstest, pareto\n",
     "import random\n",
     "import matplotlib.pyplot as plt\n",
     "import math"
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffefc175",
+   "id": "df60c0fb",
    "metadata": {},
    "source": [
     "#### Создаем выборку из непрерывного равномерного распределения"
@@ -31,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "45e90f93",
+   "id": "fa900495",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df1b8d25",
+   "id": "d9c56ec0",
    "metadata": {},
    "source": [
     "#### Строим плотность вероятности"
@@ -49,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8b33c3b6",
+   "id": "3a08f52e",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67ad99c5",
+   "id": "61a3aaf2",
    "metadata": {},
    "source": [
     "#### Создаем выборку экспоненциального распределения при помощи обратного преобразования"
@@ -78,17 +79,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "2dd493c1",
+   "execution_count": 32,
+   "id": "1e1a398c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KS статистика =  0.0028229909939024855\n",
+      "p-value =  0.4021391064713753\n"
+     ]
+    }
+   ],
    "source": [
-    "expo_lst = list(map((lambda x, halflife =1: -1/halflife * math.log(1-x)), uniform_lst ))"
+    "expo_lst = list(map((lambda x, halflife =1: -1/halflife * math.log(1-x)), uniform_lst ))\n",
+    "ks_statistic, p_value = kstest(expo_lst, 'expon')\n",
+    "print(\"KS статистика = \", ks_statistic)\n",
+    "print(\"p-value = \", p_value)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0c6ddb17",
+   "id": "92dfaf4e",
    "metadata": {},
    "source": [
     "#### Строим плотность вероятности"
@@ -97,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d427431a",
+   "id": "eb4bafe9",
    "metadata": {},
    "outputs": [
     {
@@ -118,25 +131,38 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21b81e8e",
+   "id": "6b990012",
    "metadata": {},
    "source": [
-    "#### Создаем выборку распределения Пуасона при помощи обратного преобразования"
+    "#### Создаем выборку распределения Паррето при помощи обратного преобразования"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "86ba66ba",
+   "execution_count": 46,
+   "id": "e2805176",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KS статистика =  0.0028229909939024855\n",
+      "p-value =  0.4021391064713753\n"
+     ]
+    }
+   ],
    "source": [
-    "poisson_lst = list(map(lambda x, k=1, xm=1: xm / ((1 -x)**1/k), uniform_lst))"
+    "paretto_lst = list(map(lambda x, k=1, xm=1: xm / ((1 -x)**1/k), uniform_lst))\n",
+    "b = 1\n",
+    "ks_statistic, p_value = kstest(poisson_lst, 'pareto', args=(b,))\n",
+    "print(\"KS статистика = \", ks_statistic)\n",
+    "print(\"p-value = \", p_value)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "04fa8a15",
+   "id": "87fa17e5",
    "metadata": {},
    "source": [
     "#### Строим плотность вероятности"
@@ -145,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e56bcbd6",
+   "id": "ddec5e15",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +196,7 @@
     }
    ],
    "source": [
-    "plt.hist(poisson_lst, color = 'blue', edgecolor = 'black', bins = 100000)\n",
+    "plt.hist(paretto_lst, color = 'blue', edgecolor = 'black', bins = 100000)\n",
     "plt.xlim(0, 25)\n",
     "plt.show()"
    ]
@@ -178,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5c6bb31",
+   "id": "a0ecf6ea",
    "metadata": {},
    "outputs": [],
    "source": []
